--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^4.13.5
   cupertino_icons: ^1.0.6
   dashed_circular_progress_bar: ^0.0.6
+  date_format: ^2.0.7
   firebase_auth: ^4.15.2
   firebase_core: ^2.24.2
   flutter:
